<resources>
    <string name="app_name">ChatLayoytEx</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="message">Message</string>
    <string name="clear_all_chat">Clear All Chat</string>
    <string name="email_id">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="status">Status</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_age">Edit Age</string>
    <string name="write">Write a message</string>
    <string name="edit_mobile">Edit Mobile</string>
    <string name="edit_address">Edit Aaddress</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dashbaord">Dashboard</string>
    <string name="new_user">New User?</string>
    <string name="already_register">Already Register?</string>
    <string name="signout">Sign Out</string>
    <string name="firebase">Firebase Authentication</string>
    <string name="email_authentication">Email Authentication</string>
    <string name="email">email</string>
    <string name="password2">password2</string>
    <string name="emailPattern">emailPattern</string>
    <string name="alluser">All Users</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
