<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:theme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </de.hdodenhof.circleimageview.CircleImageView>

                <Button
                    android:id="@+id/editImageBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/pencil"
                    android:backgroundTint="@color/colorPrimaryDark" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/userEmailId"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="@string/email_id"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/name"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/userProfileName"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="40dp"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/editName"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/edit"
                            android:contentDescription="editName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/age"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/userProfileAge"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="40dp"
                            android:text="@string/age"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/edieAge"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/edit"
                            android:contentDescription="edieAge" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/address"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/userProfileAddress"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="40dp"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/editAddress"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/edit"
                            android:contentDescription="editMobile" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/mobile"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/userProfileMobile"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="40dp"
                            android:text="@string/mobile"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/editMobile"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/edit"
                            android:contentDescription="editAddress" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>